--- a/kafka-connect-http/pom.xml
+++ b/kafka-connect-http/pom.xml
@@ -10,6 +10,18 @@
 
     <artifactId>kafka-connect-http</artifactId>
     <name>Kafka Connect HTTP</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
